<resources>
    <string name="app_name">9JAHUB</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_top_deals">Top Deals</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_sell">Sell on 9jahub</string>
    <string name="menu_track_order">Track Your Order</string>
    <string name="menu_shop">Shop</string>
</resources>