<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_business_24"
            android:title="@string/menu_top_deals" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_call_24"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/sell"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_sell" />
        <item
            android:id="@+id/track"
            android:icon="@drawable/ic_baseline_gps_fixed_24"
            android:title="@string/menu_track_order" />
        <item
            android:id="@+id/shop"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_shop" />


    </group>
</menu>